Stop tracking .env file

--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,6 @@
 MONGO_URI=mongodb+srv://sakshisingh3209:nIJnoEL1TEyGvwnK@cluster0.txs9s.mongodb.net/
 PORT=8080
 SECRET_KEY=SAK142S45
+CLOUD_NAME=dqydtwmvt
+API_KEY=	635397864495491
+API_SECRET=ZG3tDfgTtgs2OZQxnJZ8KXLBJV0
