--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "cloudinary": "^2.5.0",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.3.0",
+    "framer-motion": "^11.11.9",
     "lucide-react": "^0.447.0",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
